<resources>
    <string name="app_name">Cruise</string>
    <string name="ride_history">Ride history</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="cruise_logo">Cruise</string>
    <string name="showListOfCars">Show list of cars nearby</string>
    <string name="distance">Distance</string>
    <string name="rides">Rides</string>
    <string name="points">Points</string>
    <string name="nearByCars">Nearby cars</string>
    <string name="user_info">User information</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="phone_no">Phone number</string>
    <string name="distance_default_value">km</string>
    <string name="startDateLabel">Start date:</string>
    <string name="endDateLabel">End date:</string>
    <string name="distanceLabel">Distance:</string>
    <string name="priceLabel">Price:</string>
    <string name="balanceLabel">Balance</string>
    <string name="carInfo">Car info</string>
    <string name="loginHelloTitle">Hello there,\nWelcome to Cruise App</string>
    <string name="loginSlogan">Sign in to continue</string>
    <string name="loginForgotPass">Forgot your password?</string>
    <string name="logIn">Log in</string>
    <string name="loginNewUser">New user? Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="registerSlogan">Sign up to start cruising</string>
    <string name="signUp">Sign up</string>
    <string name="registerHaveAcc">Already have an account? Log in</string>
    <string name="sendEmailBtn">Send email</string>
    <string name="forgotPassSlogan">Enter your email address below so we can send you an email to change it</string>
    <string name="forgotPassTitle">Forgot your password?</string>
    <string name="empty_firstname">First name field cannot be empty</string>
    <string name="empty_lastname">Last name field cannot be empty</string>
    <string name="empty_email">Eamil field cannot be empty</string>
    <string name="empty_password">Password field cannot be empty</string>
    <string name="empty_phone">Phone number field cannot be empty</string>
    <string name="loading">Loading...</string>
    <string name="changePassword">Change password</string>
    <string name="currentPass">Current password</string>
    <string name="newPass">New password</string>
    <string name="repeatNewPass">Repeat news password</string>
    <string name="view">View</string>
    <string name="slider">Distance radius</string>
    <string name="from_you">from you</string>
    <string name="favorites">Favorites</string>
    <string name="qrScan">QR Scan</string>
    <string name="mileage">Mileage:</string>
    <string name="rent">Rent</string>
    <string name="reserve">Reserve</string>
    <string name="cancel">Cancel</string>
    <string name="favorite_empty">No cars added to favorites</string>
    <string name="quickScan">Quick scan</string>
    <string name="start_rate">Start:</string>
    <string name="ride_rate">Rate:</string>
    <string name="activeRide">Active ride</string>
    <string name="timeElapsed">Time elapsed</string>
    <string name="distanceCovered">Kilometers</string>
    <string name="ride_price">EUR</string>
    <string name="finishRide">Finish ride</string>
    <string name="rateYourRide">Rate your ride:</string>
    <string name="exitRideOnBackTitle">Are you sure you want to exit?</string>
    <string name="exitRideOnBackMessage">Your ride will end and you will be charged for it.</string>
    <string name="exit">Exit</string>
    <string name="wait">Wait</string>
    <string name="totalBonusPoints">Total bonus points:</string>
    <string name="earnedPoints">Earned bonus points:</string>
    <string name="rideFee">Ride fee:</string>
    <string name="rideFeeBP">Ride fee using bonus points:</string>
    <string name="pay">Pay</string>
    <string name="payWithBP">Pay with points</string>
    <string name="insufficientFunds">Insufficient funds! You have 2 or less euros in your wallet</string>

    <string-array name="pref_distance_entries">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>

    <string-array name="pref_distance_values">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="editBalanceButton">Edit balance</string>
</resources>
