<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/user_info">

        <EditTextPreference
            android:key="firstName"
            android:title="@string/first_name"
            android:inputType="text"/>

        <EditTextPreference
            android:key="lastName"
            android:title="@string/last_name"
            android:inputType="text"/>

        <EditTextPreference
            android:key="email"
            android:title="@string/email"
            android:inputType="textEmailAddress"/>

        <EditTextPreference
            android:key="phone"
            android:title="@string/phone_no"
            android:inputType="phone"/>

        <Preference
            android:title="@string/changePassword">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.bbf.cruise"
                android:targetClass="com.bbf.cruise.activities.ChangePasswordActivity"
                />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Other">

<!--        <ListPreference-->
<!--            android:key="distanceMode"-->
<!--            android:title="Show distance in"-->
<!--            android:entries="@array/pref_distance_entries"-->
<!--            android:entryValues="@array/pref_distance_values"-->
<!--            android:defaultValue="@string/distance_default_value"/>-->

        <SeekBarPreference
            android:key="slider"
            android:title="@string/slider"
            android:max="100"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"
            app:defaultValue="30"
            android:progress="30"
            />


    </PreferenceCategory>

</PreferenceScreen>