<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:transitionName="logo_image"
            android:src="@drawable/cruise_splash"/>

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHelloTitle"
            android:transitionName="logo_text"
            android:textSize="30sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/login_slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginSlogan"
            android:transitionName="logo_desc"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed-medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/email"
                android:transitionName="email_tran"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/enter_usrnm"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:transitionName="password_tran"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/enter_pass"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:textColor="@color/colorPrimaryDark"
                android:stateListAnimator="@null"
                android:text="@string/loginForgotPass"
                android:layout_gravity="right"
                android:textSize="10sp"
                android:elevation="0dp"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logIn"
                android:backgroundTint="@color/colorMenuText"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:transitionName="main_button_tran"/>

            <Button
                android:id="@+id/new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginNewUser"
                android:backgroundTint="@android:color/transparent"
                android:stateListAnimator="@null"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="bottom"
                android:elevation="0dp"
                android:layout_marginTop="30dp"
                android:transitionName="bottom_button_tran"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>