<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp" android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/colorGhostWhite">

        <TextView
            android:id="@+id/rateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rateYourRide"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimaryDark"/>
        
        <RatingBar
            android:id="@+id/rideRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:scaleX=".6"
            android:scaleY=".6"
            android:layout_marginTop="-10dp"
            android:layout_centerHorizontal="true"
            android:isIndicator="false"
            android:layout_below="@id/rateTV"/>

        <RelativeLayout
            android:id="@+id/firstRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rideRating">

        <TextView
            android:id="@+id/earnedPointsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earnedPoints"
            android:paddingTop="2dp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/earnedPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="50"
            android:layout_toEndOf="@id/earnedPointsText"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/totalPointsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalBonusPoints"
            android:paddingTop="2dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/earnedPoints"/>

        <TextView
            android:id="@+id/totalPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="120"
            android:layout_toEndOf="@id/totalPointsText"
            android:layout_below="@id/earnedPoints"
            android:layout_marginStart="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/secondRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstRelative"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/feeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/rideFee"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="21.5"
                android:textColor="@color/colorAccent"
                android:layout_toEndOf="@id/feeText"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/ride_price"
                android:textColor="@color/colorAccent"
                android:layout_toEndOf="@id/fee"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/feeWithBPText"
                android:layout_below="@id/feeText"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:paddingTop="2dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/rideFeeBP"/>

            <TextView
                android:id="@+id/feeBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="18"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/fee"
                android:layout_toEndOf="@id/feeWithBPText"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/ride_price"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/fee"
                android:layout_toEndOf="@id/feeBP"
                android:layout_marginStart="5dp"/>

        </RelativeLayout>

        <View
            android:id="@+id/dummy3"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/secondRelative"/>

        <Button
            android:id="@+id/payBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/payWithBP"
            android:layout_below="@id/secondRelative"
            android:background="@drawable/roundedbutton"
            android:layout_toStartOf="@id/dummy3"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/payBPBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/pay"
            android:layout_below="@id/secondRelative"
            android:background="@drawable/roundedbutton"
            android:layout_toEndOf="@id/dummy3"
            android:layout_marginTop="10dp"/>
        
    </RelativeLayout>

</RelativeLayout>